--- a/public/css/global.scss
+++ b/public/css/global.scss
@@ -1,8 +1,68 @@
 $color:red;
 
-//frontpage Menu
-@import 'menuFront';
-// misc
+//########### frontpage Menu #############
+/* Move to
+_menuFront.sccs
+Atom build in plugin cant handle this
+*/
+
+
+ul.menuFront{
+  font-weight:bold;
+  margin-right:150px;
+
+li{
+  position: relative;
+}
+
+li+li{
+  margin-left:10px !important;
+}
+
+.dropdown{
+
+  ul{
+    width:50px;
+    display:none;
+    left: -34px;
+    margin-left: 0px;
+    position: absolute;
+    top: 18px;
+    li{
+      list-style-type: block;
+      position:relative;
+    }
+
+  }
+}
+
+.dropdown:hover{
+  ul{
+    display:block;
+  }
+}
+
+  li{
+    display:inline;
+  }
+
+  a{
+    text-decoration: none;
+    color:black;
+  }
+}
+
+
+// ######## Users Panel #####
+.usersWrap{
+
+  td{
+    padding:5px;
+    padding-left:10px;
+  }
+}
+
+// ######## GLOBAL ##########
 .content{
   width:70%;
 }
