Update before layout changed
- added npm livereload,
- changing layout

--- a/resources/assets/sass/backend/_usersPanel.scss
+++ b/resources/assets/sass/backend/_usersPanel.scss
@@ -18,4 +18,10 @@
     padding:4px;
   }
 
+  //DROPDOWN NAVIGATION
+  //SIMPLE AND RESPONSIVE MENU
+  //STRIKETHROUGH HOVER EFFECT
+  //HIDDEN SIDE MENU
+  //FIXED NAVIGATION SIDEBAR ----->>> BEST
+  //SLIDING MENU ->>> BEEEEST 2 -->Brady Hullopeter
 }
