--- a/resources/assets/sass/backend.scss
+++ b/resources/assets/sass/backend.scss
@@ -5,3 +5,6 @@
 
 // ######## Users Panel #####
 @import "backend/usersPanel";
+
+// menu external - downloaded - layout
+@import "backend/hullopeter_transparency_layout_menu";
