--- a/resources/assets/sass/backend.scss
+++ b/resources/assets/sass/backend.scss
@@ -8,3 +8,6 @@
 
 // menu external - downloaded - layout
 @import "backend/hullopeter_transparency_layout_menu";
+
+// menu my styles
+@import 'backend/menu';
