--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -1,6 +1,15 @@
 $color:red;
+*{
+  color:white;
+}
+
+.activeUser *{
+  color: $color;
+}
 
 // ######## GLOBAL ##########
 .content{
   width:70%;
 }
+
+/*1*/
