--- a/resources/assets/sass/frontend/_posts.scss
+++ b/resources/assets/sass/frontend/_posts.scss
@@ -1,7 +1,16 @@
+// Mine
 .post{
-  border:1px solid rgba(0,0,0,0.1);
+/*
+  border:1px solid rgba(255,255,255,0.1);
   border-radius:10px;
 
   margin-top:15px;
   box-shadow:2px 2px 2px rgba(0,0,0,0.1);
+  */
+}
+
+// External
+
+.posts{
+  
 }
