--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -648,3 +648,29 @@ label.hamburger {
   padding-bottom: 5px;
 }
 
+.allContainersWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 15px;
+}
+
+.allContainersWrapper .singleContainer {
+  width: 450px;
+  height: 200px;
+  -webkit-box-shadow: 2px 2px 5px black;
+          box-shadow: 2px 2px 5px black;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin: 10px;
+}
+
+.displayer {
+  border: 2px yellow solid;
+  width: 300px;
+  height: 150px;
+}
+
