--- a/resources/assets/sass/backend/_menu.scss
+++ b/resources/assets/sass/backend/_menu.scss
@@ -7,3 +7,26 @@
 .top-right *{
 
 }
+// menu creating panel //
+.allContainersWrapper{
+  display: flex;
+  flex-direction: row;
+  padding:15px;
+}
+
+.allContainersWrapper .singleContainer{
+  width:450px;
+  height:200px;
+  box-shadow:2px 2px 5px black;
+
+  background-color:rgba(255,255,255,0.5);
+
+  margin:10px;
+
+}
+
+.displayer{
+  border:2px yellow solid;
+  width:300px;
+  height:150px;
+}
