--- a/resources/assets/sass/backend/_mediaLibrary.scss
+++ b/resources/assets/sass/backend/_mediaLibrary.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.uploadWrapper{
+.uploadWrapper, .menuBuilderWrapper{
   .upload-btn-wrapper, .formButton{
     padding: 9px 22px;
     cursor: pointer;
