--- a/resources/assets/sass/backend/_menu.scss
+++ b/resources/assets/sass/backend/_menu.scss
@@ -8,25 +8,53 @@
 
 }
 // menu creating panel //
-.allContainersWrapper{
-  display: flex;
-  flex-direction: row;
-  padding:15px;
-}
+.menuBuilderWrapper{
+  $smallLine:1px rgba(0,0,0,0.3) solid;
+  @mixin spacing{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    border-bottom: $smallLine;
+  }
+  .singleContainer div, .existingPosts div>div{
+    @include spacing;
+    padding: 8px;
+  }
 
-.allContainersWrapper .singleContainer{
-  width:450px;
-  height:200px;
-  box-shadow:2px 2px 5px black;
+  .singleContainer .containerControll{
+    @include spacing;
+  }
 
-  background-color:rgba(255,255,255,0.5);
+  .allContainersWrapper{
+    display: flex;
+    flex-direction: row;
+    padding:15px;
+  }
 
-  margin:10px;
+  .allContainersWrapper .singleContainer, .existingPosts{
+    width:450px;
+    height:200px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.3);
 
-}
+    background-color:#3497DA;
 
-.displayer{
-  border:2px yellow solid;
-  width:300px;
-  height:150px;
+    margin:10px;
+
+  }
+
+  .displayer{
+    border:2px yellow solid;
+    width:300px;
+    height:150px;
+  }
+
+  .wrapperControllers{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .wrapperControllers *{
+    height: auto;
+  }
 }
