--- a/resources/assets/sass/frontend/_menu.scss
+++ b/resources/assets/sass/frontend/_menu.scss
@@ -33,7 +33,7 @@ ul.menuFront{
       left: -34px;
       margin-left: 0px;
       position: absolute;
-      top: 18px;
+      top: 13px;
       li{
         list-style-type: block;
         position:relative;
@@ -54,7 +54,7 @@ ul.menuFront{
 
   a{
     text-decoration: none;
-    color:black;
+    color:white;
   }
 
   .sub_menu{
