--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -1,5 +1,5 @@
 $color:red;
-*{
+*:not([class^='phpdebugbar']){
   color:white;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
