--- a/resources/assets/sass/frontend/_others.scss
+++ b/resources/assets/sass/frontend/_others.scss
@@ -1,3 +1,8 @@
+html{
+  height:100%;
+}
+
+
 
 #user img {
   height: 51px;
@@ -11,3 +16,5 @@
   -ms-flex-align: end;
   align-items: flex-end;
 }
+
+
