--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -734,3 +734,338 @@ label.hamburger {
   height: auto;
 }
 
+.posts_edit_list *,
+.usersPanel * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.posts_edit_list *:before,
+.posts_edit_list *:after,
+.usersPanel *:before,
+.usersPanel *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.posts_edit_list body,
+.usersPanel body {
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  color: #5e5d52;
+}
+
+.posts_edit_list a,
+.usersPanel a {
+  color: #337aa8;
+}
+
+.posts_edit_list a:hover,
+.posts_edit_list a:focus,
+.usersPanel a:hover,
+.usersPanel a:focus {
+  color: #4b8ab2;
+}
+
+.posts_edit_list .container,
+.usersPanel .container {
+  margin: 5% 3%;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .container,
+  .usersPanel .container {
+    margin: 2%;
+  }
+}
+
+@media (min-width: 75em) {
+  .posts_edit_list .container,
+  .usersPanel .container {
+    margin: 2em auto;
+    max-width: 75em;
+  }
+}
+
+.posts_edit_list .responsive-table,
+.usersPanel .responsive-table {
+  width: 100%;
+  margin-bottom: 1.5em;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table,
+  .usersPanel .responsive-table {
+    font-size: .9em;
+  }
+}
+
+@media (min-width: 62em) {
+  .posts_edit_list .responsive-table,
+  .usersPanel .responsive-table {
+    font-size: 1em;
+  }
+}
+
+.posts_edit_list .responsive-table thead,
+.usersPanel .responsive-table thead {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table thead,
+  .usersPanel .responsive-table thead {
+    position: relative;
+    clip: auto;
+    height: auto;
+    width: auto;
+    overflow: auto;
+  }
+}
+
+.posts_edit_list .responsive-table thead th,
+.usersPanel .responsive-table thead th {
+  background-color: #1d96b2;
+  border: 1px solid #1d96b2;
+  font-weight: normal;
+  text-align: left;
+  color: white;
+}
+
+.posts_edit_list .responsive-table thead th:first-of-type,
+.usersPanel .responsive-table thead th:first-of-type {
+  text-align: left;
+}
+
+.posts_edit_list .responsive-table tbody,
+.posts_edit_list .responsive-table tr,
+.posts_edit_list .responsive-table th,
+.posts_edit_list .responsive-table td,
+.usersPanel .responsive-table tbody,
+.usersPanel .responsive-table tr,
+.usersPanel .responsive-table th,
+.usersPanel .responsive-table td {
+  display: block;
+  padding: 0;
+  text-align: left;
+  white-space: normal;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tr,
+  .usersPanel .responsive-table tr {
+    display: table-row;
+  }
+}
+
+.posts_edit_list .responsive-table th,
+.posts_edit_list .responsive-table td,
+.usersPanel .responsive-table th,
+.usersPanel .responsive-table td {
+  padding: .5em;
+  vertical-align: middle;
+}
+
+@media (min-width: 30em) {
+  .posts_edit_list .responsive-table th,
+  .posts_edit_list .responsive-table td,
+  .usersPanel .responsive-table th,
+  .usersPanel .responsive-table td {
+    padding: .75em .5em;
+  }
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table th,
+  .posts_edit_list .responsive-table td,
+  .usersPanel .responsive-table th,
+  .usersPanel .responsive-table td {
+    display: table-cell;
+    padding: .5em;
+  }
+}
+
+@media (min-width: 62em) {
+  .posts_edit_list .responsive-table th,
+  .posts_edit_list .responsive-table td,
+  .usersPanel .responsive-table th,
+  .usersPanel .responsive-table td {
+    padding: .75em .5em;
+  }
+}
+
+@media (min-width: 75em) {
+  .posts_edit_list .responsive-table th,
+  .posts_edit_list .responsive-table td,
+  .usersPanel .responsive-table th,
+  .usersPanel .responsive-table td {
+    padding: .75em;
+  }
+}
+
+.posts_edit_list .responsive-table caption,
+.usersPanel .responsive-table caption {
+  margin-bottom: 1em;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table caption,
+  .usersPanel .responsive-table caption {
+    font-size: 1.5em;
+  }
+}
+
+.posts_edit_list .responsive-table tfoot,
+.usersPanel .responsive-table tfoot {
+  font-size: .8em;
+  font-style: italic;
+}
+
+@media (min-width: 62em) {
+  .posts_edit_list .responsive-table tfoot,
+  .usersPanel .responsive-table tfoot {
+    font-size: .9em;
+  }
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody,
+  .usersPanel .responsive-table tbody {
+    display: table-row-group;
+  }
+}
+
+.posts_edit_list .responsive-table tbody tr,
+.usersPanel .responsive-table tbody tr {
+  margin-bottom: 1em;
+  border: 2px solid #1d96b2;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody tr,
+  .usersPanel .responsive-table tbody tr {
+    display: table-row;
+    border-width: 1px;
+  }
+}
+
+.posts_edit_list .responsive-table tbody tr:last-of-type,
+.usersPanel .responsive-table tbody tr:last-of-type {
+  margin-bottom: 0;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody tr:nth-of-type(even),
+  .usersPanel .responsive-table tbody tr:nth-of-type(even) {
+    background-color: rgba(94, 93, 82, 0.1);
+  }
+}
+
+.posts_edit_list .responsive-table tbody th[scope="row"],
+.usersPanel .responsive-table tbody th[scope="row"] {
+  background-color: #1d96b2;
+  color: white;
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody th[scope="row"],
+  .usersPanel .responsive-table tbody th[scope="row"] {
+    background-color: transparent;
+    color: #5e5d52;
+    text-align: left;
+  }
+}
+
+.posts_edit_list .responsive-table tbody td,
+.usersPanel .responsive-table tbody td {
+  text-align: right;
+}
+
+@media (min-width: 30em) {
+  .posts_edit_list .responsive-table tbody td,
+  .usersPanel .responsive-table tbody td {
+    border-bottom: 1px solid #1d96b2;
+  }
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody td,
+  .usersPanel .responsive-table tbody td {
+    text-align: left;
+  }
+}
+
+.posts_edit_list .responsive-table tbody td[data-type=currency],
+.usersPanel .responsive-table tbody td[data-type=currency] {
+  text-align: right;
+}
+
+.posts_edit_list .responsive-table tbody td[data-title]:before,
+.usersPanel .responsive-table tbody td[data-title]:before {
+  content: attr(data-title);
+  float: left;
+  font-size: .8em;
+  color: rgba(94, 93, 82, 0.75);
+}
+
+@media (min-width: 30em) {
+  .posts_edit_list .responsive-table tbody td[data-title]:before,
+  .usersPanel .responsive-table tbody td[data-title]:before {
+    font-size: .9em;
+  }
+}
+
+@media (min-width: 48em) {
+  .posts_edit_list .responsive-table tbody td[data-title]:before,
+  .usersPanel .responsive-table tbody td[data-title]:before {
+    content: none;
+  }
+}
+
+.posts_edit_list *:not(select):not(option),
+.usersPanel *:not(select):not(option) {
+  color: white !important;
+}
+
+.addImageButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  right: -90px;
+  position: fixed;
+  border-radius: 0px;
+  width: 150px;
+  -webkit-transition: linear 200ms;
+  transition: linear 200ms;
+  background-color: #007ee6;
+}
+
+.addImageButton:hover {
+  right: -18px;
+}
+
+.addImageButton .btn {
+  border: none;
+}
+
+.addImageButton img {
+  width: 35px;
+}
+
+select,
+option {
+  color: black !important;
+}
+
