--- a/resources/assets/sass/backend.scss
+++ b/resources/assets/sass/backend.scss
@@ -12,5 +12,8 @@
 // menu my styles
 @import 'backend/menu';
 
-// menu my styles
+// postPanels my styles
 @import 'backend/postsPanels';
+
+// any other styles
+@import 'backend/others';
