Added project link
- version 1.0 is live

--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -762,6 +762,7 @@ label.hamburger {
 
 .menuBuilderWrapper .existingPosts {
   border-bottom: none;
+  width: 600px;
 }
 
 .menuBuilderWrapper .displayer {
